--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
+}
+
+.delete-all-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 50px;
 }
 
 .code-input {
