--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,9 @@
   margin-bottom: 50px;
 }
 
-.delete-all-row {
+.action-btns-row {
   display: flex;
+  row-gap: 4px;
   flex-direction: row;
   align-items: center;
   margin-bottom: 50px;
